crates/milli/src/search/facet/snapshots/facet_sort_ascending.rs/filter_sort_ascending/1.snap
---
source: crates/milli/src/search/facet/facet_sort_ascending.rs
---
[202, ]
[203, ]
[204, ]
[205, ]
[207, ]
[209, ]
[211, ]
[213, ]
[216, ]
[225, ]
[226, ]
[227, ]
[228, ]
[231, ]
[233, ]
[241, ]
[244, ]
[247, ]
[250, ]
[251, ]
[256, ]
[257, ]
[260, ]
[262, ]
[263, ]
[264, ]
[265, ]
[267, ]
[269, ]
[277, ]
[278, ]
[279, ]
[280, ]
[281, ]
[282, ]
[286, ]
[292, ]
[293, ]
[295, ]
[297, ]
[208, ]
[210, ]
[219, ]
[220, ]
[223, ]
[224, ]
[232, ]
[236, ]
[238, ]
[242, ]
[243, ]
[252, ]
